syntax = "proto3";
package celinium.liquidstake.v1;


import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "celinium/x/liquid-stake/types";

message Validator{
    option (gogoproto.equal) = true;

    // The address of source chain validator account.
    string address  = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
    
    // Total amount of delegation.
    string delegationAmount = 2 [
        (cosmos_proto.scalar)  = "cosmos.Int",
        (gogoproto.customtype) = "Int",
        (gogoproto.nullable)   = false];

    // The weight used for distribute delegation funds.    
    uint64 weight = 3;
}

message SourceChain {
    // The chain id of source chain.
    string chainID = 1;

    // ibc connection id
    string connectionID = 2;

    // ibc transfer channel id
    string trasnferChannelID = 3;
 
    repeated Validator validators  = 4;

    // The address of Interchain account for receiving POS reward
    string withdrawAddress = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];

    // The address of Interchain account for delegation
    string delegateAddress = 6 [(cosmos_proto.scalar) = "cosmos.AddressString"];
 
    // The address of Interchain account for unbound
    string unboudAddress = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];

    // Redemption ratio in the current epoch
    string redemptionratio = 8 [
        (cosmos_proto.scalar)  = "cosmos.Dec",
        (gogoproto.customtype) = "Dec",
        (gogoproto.nullable)   = false
    ];

    // The denom of cross chain token.
    string ibcDenom = 9;

    // The denom of source chain native token.
    string nativeDenom = 10;

    // Derivative token denom generated after liquid stake
    string derivativeDenom = 11;

    // The amount of staked token.
    string stakedAmount = 12 [
        (cosmos_proto.scalar)  = "cosmos.Int",
        (gogoproto.customtype) = "Int",
        (gogoproto.nullable)   = false
    ];
}
